# mpio-iso

./: .gitignore  Cargo.toml
examples/: mix_dencen_grid.rs  mix_margen.rs  trlp_denue_grid.rs  trlp_denue_iso.rs  trlp_mnza_grid.rs  trlp_mnza_iso.rs
src/: isocron.rs  lectura.rs  lib.rs  main.rs  process.rs
