[package]
name = "mpio-iso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.19"
geo-types = "0.7"
shapefile = {version = "0.3", features = ["geo-types"]}
geojson = {version = "0.22", features = ["geo-types"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5"
mpls = { path = "../mpls" }
chrono = { version = "0.4", features = ["serde"] }